<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity">

    <com.example.bubbles.evilhangman.Views.CrayonTextView
        style="@style/title"
        android:id="@+id/menu_title"
        android:text="@string/menu_evil_title"
        android:layout_marginTop="50dp"
    />

    <com.example.bubbles.evilhangman.Views.CrayonButton
        style="@style/menu_button"
        android:id="@+id/play_button"
        android:text="@string/play_button"
        android:layout_below="@id/menu_title"
        android:layout_marginTop="70dp"
        android:onClick="play_button_click"
    />

    <com.example.bubbles.evilhangman.Views.CrayonButton
        style="@style/menu_button"
        android:id="@+id/instructions_button"
        android:text="@string/instructions_button"
        android:layout_below="@id/play_button"
        android:layout_marginTop="12dp"
        android:onClick="instructions_button_click"
    />

    <com.example.bubbles.evilhangman.Views.CrayonButton
        style="@style/menu_button"
        android:id="@+id/high_scores_button"
        android:text="@string/high_scores_button"
        android:layout_below="@id/instructions_button"
        android:layout_marginTop="12dp"
        android:onClick="high_scores_button_click"
    />

    <com.example.bubbles.evilhangman.Views.CrayonButton
        style="@style/menu_button"
        android:id="@+id/settings_button"
        android:text="@string/settings_button"
        android:layout_below="@id/high_scores_button"
        android:layout_marginTop="12dp"
        android:onClick="settings_button_click"
    />

</RelativeLayout>
