<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bubbles.evilhangman.SettingsActivity">

    <com.example.bubbles.evilhangman.Views.CrayonButton
        style="@style/back_button"
        android:id="@+id/back_to_menu_button"
        android:text="@string/back_to_menu_button"
        android:onClick="back_to_menu_button_click"
    />

    <com.example.bubbles.evilhangman.Views.CrayonTextView
        style="@style/title"
        android:id="@+id/settings_title"
        android:text="@string/settings_title"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/settings_title"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.bubbles.evilhangman.Views.CrayonTextView
                style="@style/standard_textview"
                android:id="@+id/word_length_text"
                android:text="@string/word_length_text"
                android:textSize="24sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
            />

            <com.example.bubbles.evilhangman.Views.CrayonTextView
                style="@style/standard_textview"
                android:id="@+id/word_length_label"
                android:text="@string/word_length_label"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.bubbles.evilhangman.Views.CrayonTextView
                style="@style/standard_textview"
                android:id="@+id/guesses_allowed_text"
                android:text="@string/guesses_allowed_text"
                android:textSize="24sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
            />

            <com.example.bubbles.evilhangman.Views.CrayonTextView
                style="@style/standard_textview"
                android:id="@+id/guesses_allowed_label"
                android:text="@string/guesses_allowed_label"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.bubbles.evilhangman.Views.CrayonTextView
                style="@style/standard_textview"
                android:id="@+id/evil_mode_text"
                android:text="@string/evil_mode_text"
                android:textSize="24sp"
            />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
